# aws-rightsizer

./: .env.example  .gitignore  Api conventions.txt  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
client/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json
client/src/: main.tsx
client/src/api/: http.ts
client/src/app/: routes.tsx
client/src/pages/: FindingsPage.tsx  OptimizationPage.tsx  WelcomePage.tsx
database notes/: notes.txt
server/: .gitignore  Alembic migration commands.txt  Alembic notes.txt  README.md  pyproject.toml  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 9dfa0a3b9bc3_add_fk_finding_run_id.py  a001_add_instance_type_to_ec2_instance.py  cf58df5daa7d_add_initial_schema_tables.py  drift000_drift_check.py  e1d23dfc935e_baseline.py
server/app/: config.py  main.py
server/app/api/: db.py  findings.py  instance.py  metrics.py  recommendations.py  runs.py
server/app/db/: __init__.py
server/app/models/: __init__.py  ec2_instance.py  finding.py  finding_status.py  recommendation.py  scan_run.py  utilization_metric.py
server/app/schemas/: ec2_instance_schema.py  finding_schema.py  metrics_schema.py  recommendation_schema.py  scan_run_schema.py
server/tests/: Migration_repeatable_test.py  conftest.py  test_db_ping.py  test_findings_get.py  test_findings_post.py  test_instance.py  test_metrics_get.py  test_models.py  test_recommendations_get.py  test_recommendations_post.py  test_runs.py  test_runs_post.py
