[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "Aidan Kane",email = "aok26@drexel.edu"}
]
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "annotated-doc (==0.0.4)",
    "annotated-types (==0.7.0)",
    "anyio (==4.12.1)",
    "click (==8.3.1)",
    "fastapi (==0.129.0)",
    "psycopg2-binary (==2.9.10)",
    "sqlalchemy (==2.0.36)",
    "h11 (==0.16.0)",
    "httptools (==0.7.1)",
    "idna (==3.11)",
    "pydantic (==2.12.5)",
    "pydantic-core (==2.41.5)",
    "python-dotenv (==1.2.1)",
    "pyyaml (==6.0.3)",
    "starlette (==0.52.1)",
    "typing-inspection (==0.4.2)",
    "typing-extensions (==4.15.0)",
    "uvicorn (==0.40.0)",
    "uvloop (==0.22.1); sys_platform != 'win32'",
    "watchfiles (==1.1.1)",
    "websockets (==16.0)",
    "alembic (>=1.18.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false